PROJECT(NLESimpleDataSyncTest)

SET(HEADERS 
	ReaderSystem.h
	SharedDataId.h
	WriterSystem.h
	RSysInterface.h
	WSysInterface.h
	)
SET(SOURCES
	DataSyncTest.cpp 
	ReaderSystem.cpp
	WriterSystem.cpp
	RSysInterface.cpp
	WSysInterface.cpp
	)

INCLUDE_DIRECTORIES(${NLE_ROOT_DIR})

INCLUDE_DIRECTORIES(${NLE_TBB_INCLUDE_PATH})
LINK_DIRECTORIES(${NLE_TBB_LIBRARY_DEBUG_PATH})

IF(NLE_TBB_LIBRARY_DEBUG_PATH STREQUAL NLE_TBB_LIBRARY_RELEASE_PATH)
ELSE(NLE_TBB_LIBRARY_DEBUG_PATH STREQUAL NLE_TBB_LIBRARY_RELEASE_PATH)
	LINK_DIRECTORIES(${NLE_TBB_LIBRARY_RELEASE_PATH})
ENDIF(NLE_TBB_LIBRARY_DEBUG_PATH STREQUAL NLE_TBB_LIBRARY_RELEASE_PATH)

ADD_EXECUTABLE (NLESimpleDataSyncTest
  ${HEADERS}
  ${SOURCES}
)

TARGET_LINK_LIBRARIES(NLESimpleDataSyncTest NLCore)

set_target_properties(NLESimpleDataSyncTest PROPERTIES DEBUG_POSTFIX _d)
install (TARGETS NLESimpleDataSyncTest 
	RUNTIME DESTINATION ${NLE_SAMPLES_INSTALL_PATH}/${PROJECT_NAME}
	)
