PROJECT(NLELargeDataSyncTest)

SET(HEADERS 
	TestSystem.h
	Data.h
	SysInterface.h
	)
SET(SOURCES
	DataSyncTest.cpp 
	TestSystem.cpp
	SysInterface.cpp
	)

INCLUDE_DIRECTORIES(${NLE_ROOT_DIR})

INCLUDE_DIRECTORIES(${NLE_TBB_INCLUDE_PATH})
LINK_DIRECTORIES(
	${NLE_TBB_LIBRARY_DEBUG_PATH}
	${NLE_TBB_LIBRARY_RELEASE_PATH}
	)

IF(NLE_TBB_LIBRARY_DEBUG_PATH STREQUAL NLE_TBB_LIBRARY_RELEASE_PATH)
ELSE(NLE_TBB_LIBRARY_DEBUG_PATH STREQUAL NLE_TBB_LIBRARY_RELEASE_PATH)
	LINK_DIRECTORIES(${NLE_TBB_LIBRARY_RELEASE_PATH})
ENDIF(NLE_TBB_LIBRARY_DEBUG_PATH STREQUAL NLE_TBB_LIBRARY_RELEASE_PATH)

ADD_EXECUTABLE (NLELargeDataSyncTest
  ${HEADERS}
  ${SOURCES}
)

TARGET_LINK_LIBRARIES(NLELargeDataSyncTest NLCore)

set_target_properties(NLELargeDataSyncTest PROPERTIES DEBUG_POSTFIX _d)
install (TARGETS NLELargeDataSyncTest 
	RUNTIME DESTINATION ${NLE_SAMPLES_INSTALL_PATH}/CoreSamples/${PROJECT_NAME}
	)
