PROJECT(EngineTest)

SET(HEADERS "")
SET(SOURCES 
	EngineTest.cpp
	)

INCLUDE_DIRECTORIES(
	${NLE_ROOT_DIR}
	)

LINK_DIRECTORIES(
	${NLE_SDK_INSTALL_PATH}/lib
	)

IF(NLE_HOST_OS STREQUAL "Windows")
	ADD_DEFINITIONS(-DNLE_DLL)
ENDIF(NLE_HOST_OS STREQUAL "Windows")

ADD_EXECUTABLE (EngineTest
  ${HEADERS}
  ${SOURCES}
)

ADD_CUSTOM_COMMAND(TARGET EngineTest POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${NLE_SDK_INSTALL_PATH}/bin" 
        $<TARGET_FILE_DIR:EngineTest>)              

TARGET_LINK_LIBRARIES(EngineTest 
	debug NLE_d
	optimized NLE
	)

set_target_properties(EngineTest PROPERTIES DEBUG_POSTFIX _d)
install (TARGETS EngineTest 
	RUNTIME DESTINATION ${NLE_SAMPLES_INSTALL_PATH}/EngineSamples/${PROJECT_NAME}
	)
