PROJECT(EngineTest)

SET(HEADERS 
	NL_GlfwApplicationLayer.h
	NL_GlfwInputMap.h
	)
SET(SOURCES 
	EngineTest.cpp
	NL_GlfwApplicationLayer.cpp
	NL_GlfwInputMap.cpp
	)

# GLFW path config

SET(NLE_GLFW_INCLUDE_PATH
	"" CACHE PATH "NLE GLFW include path")

IF(NLE_GLFW_INCLUDE_PATH STREQUAL "")
	MESSAGE(SEND_ERROR "NLE GLFW include path must be specified")
ENDIF(NLE_GLFW_INCLUDE_PATH STREQUAL "")

SET(NLE_GLFW_LIBRARY_DEBUG_PATH
	"" CACHE PATH "NLE GLFW library debug path")

IF(NLE_GLFW_LIBRARY_DEBUG_PATH STREQUAL "")
	MESSAGE(SEND_ERROR "NLE GLFW library debug path must be specified")
ENDIF(NLE_GLFW_LIBRARY_DEBUG_PATH STREQUAL "")

SET(NLE_GLFW_LIBRARY_RELEASE_PATH
	"" CACHE PATH "NLE GLFW library release path")

IF(NLE_GLFW_LIBRARY_RELEASE_PATH STREQUAL "")
	MESSAGE(SEND_ERROR "NLE GLFW library release path must be specified")
ENDIF(NLE_GLFW_LIBRARY_RELEASE_PATH STREQUAL "")


# GLEW path config

SET(NLE_GLEW_INCLUDE_PATH
	"" CACHE PATH "NLE GLEW include path")

IF(NLE_GLEW_INCLUDE_PATH STREQUAL "")
	MESSAGE(SEND_ERROR "NLE GLEW include path must be specified")
ENDIF(NLE_GLEW_INCLUDE_PATH STREQUAL "")

SET(NLE_GLEW_LIBRARY_DEBUG_PATH
	"" CACHE PATH "NLE GLEW library debug path")

IF(NLE_GLEW_LIBRARY_DEBUG_PATH STREQUAL "")
	MESSAGE(SEND_ERROR "NLE GLEW library debug path must be specified")
ENDIF(NLE_GLEW_LIBRARY_DEBUG_PATH STREQUAL "")

SET(NLE_GLEW_LIBRARY_RELEASE_PATH
	"" CACHE PATH "NLE GLEW library release path")

IF(NLE_GLEW_LIBRARY_RELEASE_PATH STREQUAL "")
	MESSAGE(SEND_ERROR "NLE GLEW library release path must be specified")
ENDIF(NLE_GLEW_LIBRARY_RELEASE_PATH STREQUAL "")


INCLUDE_DIRECTORIES(
	${NLE_ROOT_DIR}
	${NLE_SDK_INCLUDE_PATH}
	${NLE_GLFW_INCLUDE_PATH}
	${NLE_GLEW_INCLUDE_PATH}
	)

LINK_DIRECTORIES(
	${NLE_SDK_LIBRARY_DEBUG_PATH}
	${NLE_SDK_LIBRARY_RELEASE_PATH}
	${NLE_GLFW_LIBRARY_DEBUG_PATH}
	${NLE_GLFW_LIBRARY_RELEASE_PATH}
	${NLE_GLEW_LIBRARY_DEBUG_PATH}
	${NLE_GLEW_LIBRARY_RELEASE_PATH}
	)

ADD_DEFINITIONS(-DNLE_DLL)

ADD_EXECUTABLE (EngineTest
  ${HEADERS}
  ${SOURCES}
)

ADD_CUSTOM_COMMAND(TARGET EngineTest POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${NLE_SDK_INCLUDE_PATH}/../bin" 
        $<TARGET_FILE_DIR:EngineTest>)              

TARGET_LINK_LIBRARIES(EngineTest 
	debug NLE_d
	optimized NLE
	
	debug glfw3dll
	optimized glfw3dll
	
	debug glew32
	optimized glew32
	)

set_target_properties(EngineTest PROPERTIES DEBUG_POSTFIX _d)
install (TARGETS EngineTest 
	RUNTIME DESTINATION ${NLE_SAMPLE_INSTALL_PATH}/EngineSamples/${PROJECT_NAME}
	)
